--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -7,4 +7,7 @@
 spring.application.name=GptUa
 logging.level.ua.shpp.gpt=INFO
 
-server.port=8080
+server.port=5000
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+api.ver = @version@
